--- a/web/contact.html
+++ b/web/contact.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İletişim | Dostlar Konağı FS25</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./tailwind.output.css">
 </head>
-<body>
-    <nav class="main-nav">
-      <a href="home.html" class="nav-link">Anasayfa</a>
-      <a href="server.html" class="nav-link">Sunucu Hakkında</a>
-      <a href="gallery.html" class="nav-link">Galeri</a>
-      <a href="mods.html" class="nav-link">Modlar</a>
-      <a href="rules.html" class="nav-link">Kurallar</a>
-      <a href="contact.html" class="nav-link active">İletişim</a>
+<body class="bg-gray-950 text-gray-100 font-sans min-h-screen">
+    <nav class="flex flex-wrap justify-center gap-3 py-6 mb-8 bg-gray-900/80 rounded-b-xl shadow">
+        <a href="home.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Anasayfa</a>
+        <a href="server.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Sunucu Hakkında</a>
+        <a href="gallery.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Galeri</a>
+        <a href="mods.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Modlar</a>
+        <a href="rules.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Kurallar</a>
+        <a href="contact.html" class="px-4 py-2 rounded-lg font-medium text-blue-400 bg-gray-800">İletişim</a>
     </nav>
-    <div class="container">
-        <h2>İletişim</h2>
-        <div class="contact-box">
-            <b>Discord:</b> <a href="https://discord.gg/yQ7XNK6RyN" target="_blank" style="color:#72b01d;">discord.gg/yQ7XNK6RyN</a><br>
-            <b>Yönetici:</b> poncikpanda<br>
-            <b>Mail:</b> <span style="color:#fff;">destek@dostlarkonagi.com.tr</span>
+    <main class="max-w-xl mx-auto px-4">
+        <h2 class="text-xl font-bold text-blue-400 mb-6 text-center">İletişim</h2>
+        <div class="bg-gray-900 rounded-xl shadow p-6 mb-8">
+            <div class="mb-2"><b>Discord:</b> <a href="https://discord.gg/yQ7XNK6RyN" target="_blank" class="text-blue-400 underline">discord.gg/yQ7XNK6RyN</a></div>
+            <div class="mb-2"><b>Yönetici:</b> poncikpanda</div>
+            <div><b>Mail:</b> <span class="text-gray-200">destek@dostlarkonagi.com.tr</span></div>
         </div>
-    </div>
-    <footer>
+    </main>
+    <footer class="text-center text-xs text-gray-500 py-6 mt-8">
         Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu<br>
         İletişim: <b>poncikpanda</b> (Discord)
     </footer>
