--- a/web/home.html
+++ b/web/home.html
@@ -4,41 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anasayfa | Dostlar Konağı FS25</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./tailwind.output.css">
 </head>
-<body>
-<nav class="main-nav">
-      <a href="home.html" class="nav-link active">Anasayfa</a>
-      <a href="server.html" class="nav-link">Sunucu Hakkında</a>
-      <a href="gallery.html" class="nav-link">Galeri</a>
-      <a href="mods.html" class="nav-link">Modlar</a>
-      <a href="rules.html" class="nav-link">Kurallar</a>
-      <a href="contact.html" class="nav-link">İletişim</a>
-</nav>
-<div class="header">
-    <img src="./assets/letter-d.png" alt="FS25 Logo" class="logo">
-    <h1>Farming Simulator 2025<br><span class="subtitle">Dostlar Konağı Sunucusu</span></h1>
-</div>
-<div class="highlight-box">
-    <b>Hoş geldin!</b> Dostlar Konağı, Farming Simulator 25 için kurulan, samimi ve aktif bir topluluk sunucusudur.<br><br>
-    <b>Sunucu Özellikleri:</b>
-    <ul>
-        <li>Orijinal haritalar ve topluluk tarafından seçilmiş modlar</li>
-        <li>Adil ve eğlenceli oyun ortamı</li>
-        <li>Aktif Discord desteği ve rehberlik</li>
-        <li>Her seviyeden oyuncuya açık</li>
-    </ul>
-</div>
-<div class="discord-invite">
-    <a href="https://discord.gg/yQ7XNK6RyN" target="_blank" class="discord-btn">Discord'a Katıl</a>
-    <div class="contact-info">Her türlü soru ve destek için Discord sunucumuza bekleriz.<br>Yönetici: <b>poncikpanda</b></div>
-</div>
-<div class="community-box">
-    <b>Topluluğumuzda:</b> Yardımlaşma, saygı ve eğlence ön plandadır. Katıl, birlikte büyüyelim!
-</div>
-<footer>
-    Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu<br>
-    İletişim: <b>poncikpanda</b> (Discord)
-</footer>
+<body class="bg-gray-950 text-gray-100 font-sans min-h-screen">
+    <nav class="flex flex-wrap justify-center gap-3 py-6 mb-8 bg-gray-900/80 rounded-b-xl shadow">
+        <a href="home.html" class="px-4 py-2 rounded-lg font-medium text-blue-400 bg-gray-800">Anasayfa</a>
+        <a href="server.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Sunucu Hakkında</a>
+        <a href="gallery.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Galeri</a>
+        <a href="mods.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Modlar</a>
+        <a href="rules.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Kurallar</a>
+        <a href="contact.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">İletişim</a>
+    </nav>
+    <main class="max-w-xl mx-auto px-4">
+        <div class="flex flex-col items-center mb-8">
+            <img src="./assets/letter-d.png" alt="FS25 Logo" class="w-20 h-20 mb-3">
+            <h1 class="text-2xl font-bold text-blue-400 text-center">Farming Simulator 2025<br><span class="block text-lg text-gray-300 font-normal">Dostlar Konağı Sunucusu</span></h1>
+        </div>
+        <div class="bg-gray-900 rounded-xl shadow p-6 mb-6">
+            <p class="font-semibold text-lg mb-2">Hoş geldin!</p>
+            <p class="mb-4 text-gray-300">Dostlar Konağı, Farming Simulator 25 için kurulan, samimi ve aktif bir topluluk sunucusudur.</p>
+            <p class="font-semibold mb-2">Sunucu Özellikleri:</p>
+            <ul class="list-disc list-inside space-y-1 text-gray-200">
+                <li>Orijinal haritalar ve topluluk tarafından seçilmiş modlar</li>
+                <li>Adil ve eğlenceli oyun ortamı</li>
+                <li>Aktif Discord desteği ve rehberlik</li>
+                <li>Her seviyeden oyuncuya açık</li>
+            </ul>
+        </div>
+        <div class="flex flex-col items-center bg-gray-900 rounded-xl shadow p-6 mb-6">
+            <a href="https://discord.gg/yQ7XNK6RyN" target="_blank" class="inline-block px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg shadow hover:bg-blue-600 transition mb-2">Discord'a Katıl</a>
+            <div class="text-gray-300 text-sm">Her türlü soru ve destek için Discord sunucumuza bekleriz.<br>Yönetici: <b>poncikpanda</b></div>
+        </div>
+        <div class="bg-gray-900 rounded-xl shadow p-6 mb-6 text-center">
+            <b class="block text-blue-400 mb-1">Topluluğumuzda:</b>
+            <span class="text-gray-200">Yardımlaşma, saygı ve eğlence ön plandadır. Katıl, birlikte büyüyelim!</span>
+        </div>
+    </main>
+    <footer class="text-center text-xs text-gray-500 py-6 mt-8">
+        Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu<br>
+        İletişim: <b>poncikpanda</b> (Discord)
+    </footer>
 </body>
 </html>
