--- a/web/rules.html
+++ b/web/rules.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kurallar | Dostlar Konağı FS25</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./tailwind.output.css">
 </head>
-<body>
-    <nav class="main-nav">
-      <a href="home.html" class="nav-link">Anasayfa</a>
-      <a href="server.html" class="nav-link">Sunucu Hakkında</a>
-      <a href="gallery.html" class="nav-link">Galeri</a>
-      <a href="mods.html" class="nav-link">Modlar</a>
-      <a href="rules.html" class="nav-link active">Kurallar</a>
-      <a href="contact.html" class="nav-link">İletişim</a>
+<body class="bg-gray-950 text-gray-100 font-sans min-h-screen">
+    <nav class="flex flex-wrap justify-center gap-3 py-6 mb-8 bg-gray-900/80 rounded-b-xl shadow">
+        <a href="home.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Anasayfa</a>
+        <a href="server.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Sunucu Hakkında</a>
+        <a href="gallery.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Galeri</a>
+        <a href="mods.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Modlar</a>
+        <a href="rules.html" class="px-4 py-2 rounded-lg font-medium text-blue-400 bg-gray-800">Kurallar</a>
+        <a href="contact.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">İletişim</a>
     </nav>
-    <div class="container">
-        <h2>Kurallar</h2>
-        <ul class="rules-list">
+    <main class="max-w-xl mx-auto px-4">
+        <h2 class="text-xl font-bold text-blue-400 mb-6 text-center">Kurallar</h2>
+        <ul class="list-disc list-inside space-y-2 bg-gray-900 rounded-xl shadow p-6 mb-8 text-gray-200">
             <li>Sunucuya katılmadan önce Discord'daki kuralları okuyun.</li>
             <li>Modları indirirken bağlantı sorunları yaşarsanız Discord'dan destek alın.</li>
             <li>Modlar düzenli olarak güncellenir, eski sürümleri silmeniz önerilir.</li>
             <li>Toplulukta saygılı ve yardımsever olun.</li>
             <li>Hile, bug ve exploit kullanımı yasaktır.</li>
         </ul>
-    </div>
-    <footer>
+    </main>
+    <footer class="text-center text-xs text-gray-500 py-6 mt-8">
         Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu<br>
         İletişim: <b>poncikpanda</b> (Discord)
     </footer>
