--- a/web/server.html
+++ b/web/server.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunucu Hakkında | Dostlar Konağı FS25</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./tailwind.output.css">
 </head>
-<body>
-    <nav class="main-nav">
-      <a href="home.html" class="nav-link">Anasayfa</a>
-      <a href="server.html" class="nav-link active">Sunucu Hakkında</a>
-      <a href="gallery.html" class="nav-link">Galeri</a>
-      <a href="mods.html" class="nav-link">Modlar</a>
-      <a href="rules.html" class="nav-link">Kurallar</a>
-      <a href="contact.html" class="nav-link">İletişim</a>
+<body class="bg-gray-950 text-gray-100 font-sans min-h-screen">
+    <nav class="flex flex-wrap justify-center gap-3 py-6 mb-8 bg-gray-900/80 rounded-b-xl shadow">
+        <a href="home.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Anasayfa</a>
+        <a href="server.html" class="px-4 py-2 rounded-lg font-medium text-blue-400 bg-gray-800">Sunucu Hakkında</a>
+        <a href="gallery.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Galeri</a>
+        <a href="mods.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Modlar</a>
+        <a href="rules.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Kurallar</a>
+        <a href="contact.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">İletişim</a>
     </nav>
-    <div class="container">
-        <h2>Sunucu Hakkında</h2>
-        <div id="serverInfoBox" class="server-info-box">
-            <div id="serverInfoLoading">Yükleniyor...</div>
+    <main class="max-w-xl mx-auto px-4">
+        <h2 class="text-xl font-bold text-blue-400 mb-6 text-center">Sunucu Hakkında</h2>
+        <div id="serverInfoBox" class="bg-gray-900 rounded-xl shadow p-6 flex flex-col items-center">
+            <div id="serverInfoLoading" class="text-gray-400">Yükleniyor...</div>
             <div id="serverInfoContent" style="display:none;">
-                <div class="server-name" id="serverName"></div>
-                <div><b>Oyun:</b> <span id="serverGame"></span></div>
-                <div><b>Sürüm:</b> <span id="serverVersion"></span></div>
-                <div><b>Harita:</b> <span id="serverMap"></span></div>
-                <div><b>Durum:</b> <span id="serverStatus"></span></div>
-                <div class="server-desc">Dostlar Konağı FS25 sunucusu, topluluk için optimize edilmiş, güncel ve güvenli bir oyun ortamı sunar.</div>
+                <div class="text-lg font-semibold text-blue-300 mb-2" id="serverName"></div>
+                <div class="mb-1"><b>Oyun:</b> <span id="serverGame"></span></div>
+                <div class="mb-1"><b>Sürüm:</b> <span id="serverVersion"></span></div>
+                <div class="mb-1"><b>Harita:</b> <span id="serverMap"></span></div>
+                <div class="mb-2"><b>Durum:</b> <span id="serverStatus"></span></div>
+                <div class="text-gray-300 text-sm">Dostlar Konağı FS25 sunucusu, topluluk için optimize edilmiş, güncel ve güvenli bir oyun ortamı sunar.</div>
             </div>
         </div>
-    </div>
-    <footer>
+    </main>
+    <footer class="text-center text-xs text-gray-500 py-6 mt-8">
         Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu<br>
         İletişim: <b>poncikpanda</b> (Discord)
     </footer>
@@ -47,7 +47,7 @@
             document.getElementById('serverMap').textContent = data.mapName;
             const statusEl = document.getElementById('serverStatus');
             statusEl.textContent = data.online ? 'Çevrimiçi' : 'Kapalı';
-            statusEl.style.color = data.online ? '#72b01d' : '#f04747';
+            statusEl.className = data.online ? 'text-green-400 font-bold' : 'text-red-400 font-bold';
         } catch {
             document.getElementById('serverInfoLoading').textContent = 'Sunucu bilgisi alınamadı.';
         }
