--- a/web/home.html
+++ b/web/home.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anasayfa | Dostlar Konağı FS25</title>
-    <link rel="stylesheet" href="./tailwind.output.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body class="bg-gray-950 text-gray-100 font-sans min-h-screen">
     <nav class="flex flex-wrap justify-center gap-3 py-6 mb-8 bg-gray-900/80 rounded-b-xl shadow">
         <a href="home.html" class="px-4 py-2 rounded-lg font-medium text-blue-400 bg-gray-800">Anasayfa</a>
-        <a href="server.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Sunucu Hakkında</a>
+        <a href="server.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Sunucu
+            Hakkında</a>
         <a href="gallery.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Galeri</a>
         <a href="mods.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Modlar</a>
         <a href="rules.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Kurallar</a>
@@ -18,11 +21,13 @@
     <main class="max-w-xl mx-auto px-4">
         <div class="flex flex-col items-center mb-8">
             <img src="./assets/letter-d.png" alt="FS25 Logo" class="w-20 h-20 mb-3">
-            <h1 class="text-2xl font-bold text-blue-400 text-center">Farming Simulator 2025<br><span class="block text-lg text-gray-300 font-normal">Dostlar Konağı Sunucusu</span></h1>
+            <h1 class="text-2xl font-bold text-blue-400 text-center">Farming Simulator 2025<br><span
+                    class="block text-lg text-gray-300 font-normal">Dostlar Konağı Sunucusu</span></h1>
         </div>
         <div class="bg-gray-900 rounded-xl shadow p-6 mb-6">
             <p class="font-semibold text-lg mb-2">Hoş geldin!</p>
-            <p class="mb-4 text-gray-300">Dostlar Konağı, Farming Simulator 25 için kurulan, samimi ve aktif bir topluluk sunucusudur.</p>
+            <p class="mb-4 text-gray-300">Dostlar Konağı, Farming Simulator 25 için kurulan, samimi ve aktif bir
+                topluluk sunucusudur.</p>
             <p class="font-semibold mb-2">Sunucu Özellikleri:</p>
             <ul class="list-disc list-inside space-y-1 text-gray-200">
                 <li>Orijinal haritalar ve topluluk tarafından seçilmiş modlar</li>
@@ -32,8 +37,11 @@
             </ul>
         </div>
         <div class="flex flex-col items-center bg-gray-900 rounded-xl shadow p-6 mb-6">
-            <a href="https://discord.gg/yQ7XNK6RyN" target="_blank" class="inline-block px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg shadow hover:bg-blue-600 transition mb-2">Discord'a Katıl</a>
-            <div class="text-gray-300 text-sm">Her türlü soru ve destek için Discord sunucumuza bekleriz.<br>Yönetici: <b>poncikpanda</b></div>
+            <a href="https://discord.gg/yQ7XNK6RyN" target="_blank"
+                class="inline-block px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg shadow hover:bg-blue-600 transition mb-2">Discord'a
+                Katıl</a>
+            <div class="text-gray-300 text-sm">Her türlü soru ve destek için Discord sunucumuza bekleriz.<br>Yönetici:
+                <b>poncikpanda</b></div>
         </div>
         <div class="bg-gray-900 rounded-xl shadow p-6 mb-6 text-center">
             <b class="block text-blue-400 mb-1">Topluluğumuzda:</b>
@@ -45,4 +53,5 @@
         İletişim: <b>poncikpanda</b> (Discord)
     </footer>
 </body>
+
 </html>
