--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=home.html">
     <title>Dostlar Konağı FS25 | Yönlendiriliyor...</title>
-    <link rel="stylesheet" href="./tailwind.output.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body class="min-h-screen flex items-center justify-center bg-gray-950 text-gray-100 font-sans">
