--- a/web/mods.html
+++ b/web/mods.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modlar | Dostlar Konağı FS25</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body class="bg-gray-950 text-gray-100 font-sans min-h-screen">
     <nav class="flex flex-wrap justify-center gap-3 py-6 mb-8 bg-gray-900/80 rounded-b-xl shadow">
         <a href="home.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Anasayfa</a>
-        <a href="server.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Sunucu Hakkında</a>
+        <a href="server.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Sunucu
+            Hakkında</a>
         <a href="gallery.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Galeri</a>
         <a href="mods.html" class="px-4 py-2 rounded-lg font-medium text-blue-400 bg-gray-800">Modlar</a>
         <a href="rules.html" class="px-4 py-2 rounded-lg font-medium text-gray-200 hover:bg-gray-800">Kurallar</a>
@@ -18,17 +21,12 @@
     <main class="max-w-3xl mx-auto px-4">
         <h2 class="text-xl font-bold text-blue-400 mb-6 text-center">Modlar</h2>
         <div class="flex flex-wrap gap-3 mb-6 items-center justify-center">
-            <input type="text" id="search" placeholder="Mod ara..." class="px-3 py-2 rounded bg-gray-800 text-gray-100 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-400 min-w-[140px] max-w-[220px]">
-            <select id="authorFilter" class="px-3 py-2 rounded bg-gray-800 text-gray-100 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-400 min-w-[110px] max-w-[180px]">
-                <option value="">Tüm Yazarlar</option>
-            </select>
-            <select id="sortSelect" class="px-3 py-2 rounded bg-gray-800 text-gray-100 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-400 min-w-[110px] max-w-[180px]">
-                <option value="name-asc">İsme Göre (A-Z)</option>
-                <option value="name-desc">İsme Göre (Z-A)</option>
-                <option value="author-asc">Yazara Göre (A-Z)</option>
-                <option value="author-desc">Yazara Göre (Z-A)</option>
-            </select>
-            <a href="https://gs-85-14-206-57.server.4netplayers.com:20820/all_mods_download?onlyActive=true" target="_blank" class="inline-block px-4 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow hover:bg-blue-600 transition">Tüm Modları İndir</a>
+            <input type="text" id="search" placeholder="Mod ara..."
+                class="px-3 py-2 rounded bg-gray-800 text-gray-100 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-400 min-w-[140px] max-w-[220px]">
+            <a href="https://gs-85-14-206-57.server.4netplayers.com:20820/all_mods_download?onlyActive=true"
+                target="_blank"
+                class="inline-block px-4 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow hover:bg-blue-600 transition">Tüm
+                Modları İndir</a>
         </div>
         <div class="overflow-x-auto rounded-xl shadow mb-4">
             <ul class="divide-y divide-gray-800" id="modList"></ul>
@@ -86,7 +84,7 @@
         }
         function updateAuthorFilter() {
             const select = document.getElementById('authorFilter');
-            const authors = Array.from(new Set(allMods.map(m => m.author).filter(Boolean))).sort((a,b)=>a.localeCompare(b));
+            const authors = Array.from(new Set(allMods.map(m => m.author).filter(Boolean))).sort((a, b) => a.localeCompare(b));
             allAuthors = authors;
             select.innerHTML = '<option value="">Tüm Yazarlar</option>' + authors.map(a => `<option value="${a}">${a}</option>`).join('');
         }
@@ -96,14 +94,14 @@
             const author = document.getElementById('authorFilter').value;
             const sort = document.getElementById('sortSelect').value;
             filteredMods = allMods.filter(mod => {
-                const matchesText = (mod.name || mod.id || '').toLowerCase().includes(q) || (mod.text||'').toLowerCase().includes(q);
+                const matchesText = (mod.name || mod.id || '').toLowerCase().includes(q) || (mod.text || '').toLowerCase().includes(q);
                 const matchesAuthor = !author || mod.author === author;
                 return matchesText && matchesAuthor;
             });
-            if (sort === 'name-asc') filteredMods.sort((a,b)=>a.text.localeCompare(b.text));
-            else if (sort === 'name-desc') filteredMods.sort((a,b)=>b.text.localeCompare(a.text));
-            else if (sort === 'author-asc') filteredMods.sort((a,b)=>(a.author||'').localeCompare(b.author||''));
-            else if (sort === 'author-desc') filteredMods.sort((a,b)=>(b.author||'').localeCompare(a.author||''));
+            if (sort === 'name-asc') filteredMods.sort((a, b) => a.text.localeCompare(b.text));
+            else if (sort === 'name-desc') filteredMods.sort((a, b) => b.text.localeCompare(a.text));
+            else if (sort === 'author-asc') filteredMods.sort((a, b) => (a.author || '').localeCompare(b.author || ''));
+            else if (sort === 'author-desc') filteredMods.sort((a, b) => (b.author || '').localeCompare(a.author || ''));
             renderMods(filteredMods);
         }
         function updateModInfo() {
@@ -136,4 +134,5 @@
         });
     </script>
 </body>
+
 </html>
